// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CleaningsSection component tests matches snapshot 1`] = `
<Row
  gutter={24}
>
  <Col
    lg={16}
  >
    <h1
      className="text-headline mb-8"
    >
      <Memo(FormattedMessage)
        id="addNewCamper.tripFees.title"
      />
    </h1>
    <p
      className="mb-24"
    >
      <Memo(FormattedMessage)
        id="addNewCamper.tripFees.subTitle"
      />
    </p>
    <div
      className="mb-8 text-subheader font-700"
    >
      <Memo(FormattedMessage)
        id="addNewCamper.tripFees.cleaning.title"
      />
    </div>
    <p
      className="mb-16"
    >
      <Memo(FormattedMessage)
        id="addNewCamper.tripFees.cleaning.subTitle"
      />
    </p>
  </Col>
  <div
    className="w-100"
  />
  <Col
    lg={8}
    md={12}
  >
    <div
      className="main-input-wrap-addtxt"
    >
      <Field
        component={[Function]}
        formItemClasses="mb-0"
        id="cleaningAndPreparationFee"
        label={
          Object {
            "id": "addNewCamper.tripFees.cleaning.label",
          }
        }
        name="cleaningAndPreparationFee"
        placeholder="0"
        prefix="$"
        type="number"
      />
    </div>
  </Col>
</Row>
`;

exports[`CleaningsSection component tests matches snapshot when value exists 1`] = `
<Row
  gutter={24}
>
  <Col
    lg={16}
  >
    <h1
      className="text-headline mb-8"
    >
      <Memo(FormattedMessage)
        id="addNewCamper.tripFees.title"
      />
    </h1>
    <p
      className="mb-24"
    >
      <Memo(FormattedMessage)
        id="addNewCamper.tripFees.subTitle"
      />
    </p>
    <div
      className="mb-8 text-subheader font-700"
    >
      <Memo(FormattedMessage)
        id="addNewCamper.tripFees.cleaning.title"
      />
    </div>
    <p
      className="mb-16"
    >
      <Memo(FormattedMessage)
        id="addNewCamper.tripFees.cleaning.subTitle"
      />
    </p>
  </Col>
  <div
    className="w-100"
  />
  <Col
    lg={8}
    md={12}
  >
    <div
      className="main-input-wrap-addtxt"
    >
      <Field
        component={[Function]}
        formItemClasses="mb-0"
        id="cleaningAndPreparationFee"
        label={
          Object {
            "id": "addNewCamper.tripFees.cleaning.label",
          }
        }
        name="cleaningAndPreparationFee"
        placeholder="0"
        prefix="$"
        type="number"
      />
    </div>
  </Col>
  <div
    className="w-100"
  />
  <Col
    lg={14}
    md={20}
  >
    <Alert
      className="mt-16 mb-0"
      icon={
        <i
          className="icon icon-alert"
        />
      }
      message={
        <Memo(FormattedMessage)
          id="addNewCamper.tripFees.cleaning.advice"
        />
      }
      showIcon={true}
      type="warning"
    />
  </Col>
</Row>
`;
